change to list.of